# proteolyzer

./: .gitignore  README.md  pydoc-markdown.yml  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  ruff.yml
data/: unimod_amino_acids.csv  unimod_modifications.csv
docs/: .gitignore  docusaurus.config.js  package-lock.json  sidebar.json
docs/docs/: sidebar.json
docs/docs/proteolyzer/: __init__.md
docs/docs/proteolyzer/cellenone/: __init__.md  cellenone.md
docs/docs/proteolyzer/plots/: __init__.md  base.md  relational.md
docs/docs/proteolyzer/transformers/: __init__.md  matrix.md
docs/docs/proteolyzer/utils/: __init__.md  constants.md  loader.md  logging.md  models.md  operations.md  processor.md
docs/proteolyzer/: __init__.md
docs/proteolyzer/cellenone/: __init__.md  cellenone.md
docs/proteolyzer/plots/: __init__.md  base.md  relational.md
docs/proteolyzer/transformers/: __init__.md  matrix.md
docs/proteolyzer/utils/: __init__.md  constants.md  loader.md  logging.md  models.md  operations.md  processor.md
examples/aas/: Workbook.ipynb  params.yaml
examples/cellenOne/: Workbook.ipynb
examples/cellenOne/cellenone_files/Cells/BSA5_PFA2.Run/: Reordered_20250926_15182726_sample name_isolated.xls  Tscatter.xls
examples/cellenOne/cellenone_files/Cells/BSA_PFA4.Run/: 20250926_15284926_sample name_geoprops.xls  Tscatter.xls
examples/cellenOne/cellenone_files/Cells/Condition_1.Run/: 20250926_15284926_sample name.par  20250926_15284926_sample name_FieldData.fld  20250926_15284926_sample name_geoprops.xls  20250926_15284926_sample name_isolated.xls  Reordered_20250926_15284926_sample name_geoprops.xls  Reordered_20250926_15284926_sample name_isolated.xls  Tscatter.xls
examples/cellenOne/cellenone_files/Cells/Condition_2.Run/: 20250926_15182726_sample name.par  20250926_15182726_sample name_FieldData.fld  20250926_15182726_sample name_geoprops.xls  20250926_15182726_sample name_isolated.xls  Reordered_20250926_15182726_sample name_geoprops.xls  Reordered_20250926_15182726_sample name_isolated.xls  Tscatter.xls
examples/cellenOne/cellenone_files/Cells/Condition_3.Run/: 20250926_15391426_sample name.par  20250926_15391426_sample name_FieldData.fld  20250926_15391426_sample name_geoprops.xls  20250926_15391426_sample name_isolated.xls  Reordered_20250926_15391426_sample name_geoprops.xls  Reordered_20250926_15391426_sample name_isolated.xls  Tscatter.xls
examples/cellenOne/cellenone_files/Cells/Condition_4.Run/: 20250926_15524326_sample name.par  20250926_15524326_sample name_FieldData.fld  20250926_15524326_sample name_geoprops.xls  20250926_15524326_sample name_isolated.xls  Reordered_20250926_15524326_sample name_geoprops.xls  Reordered_20250926_15524326_sample name_isolated.xls  Tscatter.xls
examples/cellenOne/cellenone_files/Cells/Suc20_PFA2.Run/: 20250926_15391426_sample name.par  20250926_15391426_sample name_FieldData.fld  20250926_15391426_sample name_geoprops.xls  20250926_15391426_sample name_isolated.xls  Reordered_20250926_15391426_sample name_geoprops.xls
examples/cellenOne/cellenone_files/Cells/Suc20_PFA4.Run/: 20250926_15524326_sample name.par  20250926_15524326_sample name_geoprops.xls  Reordered_20250926_15524326_sample name_geoprops.xls  Reordered_20250926_15524326_sample name_isolated.xls  Tscatter.xls
examples/core/: Workbook.ipynb  report.parquet
references/unimod/: Workbook.ipynb  unimod.py
references/unimod/input/: unimod_tables.xml  unimod_tables_1.xsd
src/proteoboost/: __init__.py
src/proteoboost.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/proteoboost/cellenone/: __init__.py  cellenone.py
src/proteoboost/plots/: __init__.py  base.py  relational.py
src/proteoboost/transformers/: __init__.py  matrix.py
src/proteoboost/utils/: __init__.py  constants.py  loader.py  logging.py  models-Orhun-MBP.py  models.py  operations.py  processor.py
src/proteolyzer/: __init__.py  config.py
src/proteolyzer/aas/: __init__.py  config.py  detection.py  quantification.py  translation.py  utils.py  validation.py
src/proteolyzer/cellenone/: __init__.py  cellenone.py  config.py
src/proteolyzer/plots/: __init__.py  base.py  relational.py
src/proteolyzer/plugins/: __init__.py
src/proteolyzer/plugins/aas/: Config.py  Constants.py  Detection.py  Quantification.py  Translation.py  Utils.py  Validation.py
src/proteolyzer/plugins/cellenone/: Config.py  __init__.py  cellenone.py
src/proteolyzer/resources/: unimod_amino_acids.csv
src/proteolyzer/transformers/: __init__.py  matrix.py
src/proteolyzer/unimod/: Workbook.ipynb  __init__.py  loader.py  main.py  processor.py
src/proteolyzer/utils/: __init__.py  config.py  constants.py  loader.py  logging.py  models.py  operations.py  processor.py
