[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "proteolyzer"
requires-python = ">=3.14"
dependencies = [
    "pandas",
    "numpy",
    "pydantic",
    "pyarrow",
    "matplotlib",
    "seaborn",
    "scienceplots",
    "adjusttext",
    "chardet",
    'python-magic-bin ; platform_system == "Windows"',
    'python-magic ; platform_system != "Windows"'
]

dynamic = ["version"]

[project.optional-dependencies]
unimod = [
    "requests",
    "xml2db",
    "sqlalchemy",
]
aas = [
    "pyahocorasick",
    "biopython",
    "pyyaml",
    "fastparquet",
    "openpyxl",
    # Windows
    "quickdna @ https://github.com/OrhunKok/quickdna/releases/download/v0.6.0/quickdna-0.6.0-cp314-cp314-win_amd64.whl ; sys_platform == 'win32'",
    # Linux
    "quickdna @ https://github.com/OrhunKok/quickdna/releases/download/v0.6.0/quickdna-0.6.0-cp314-cp314-manylinux_2_28_x86_64.whl ; sys_platform == 'linux'",
    # Apple Silicon macOS
    "quickdna @ https://github.com/OrhunKok/quickdna/releases/download/v0.6.0/quickdna-0.6.0-cp314-cp314-macosx_11_0_arm64.whl ; sys_platform == 'darwin' and platform_machine == 'arm64'"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["resources/*"]

[tool.setuptools_scm]




[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

target-version = "py314"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E712"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["E712"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"