[metadata]
name = proteoboost
version = 0.0.1
author = Orhun Kok
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    pandas
    numpy
    pydantic
    pyarrow
[options.packages.find]
where = src

