[metadata]
name = proteolyzer
author = Orhun Kok
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
use_scm_version = True

install_requires =
    pandas
    numpy
    pydantic
    pyarrow
    scienceplots
    chardet
    adjusttext
[options.packages.find]
where = src
