[metadata]
name = proteolyzer
author = Orhun Kok
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
use_scm_version = True

install_requires =
    pandas
    numpy
    pydantic
    pyarrow
    scienceplots
    chardet
    adjusttext
[options.packages.find]
where = src

[options]
packages = find:
include_package_data = true
[options.package_data]
* = resources/*

[options.extras_require]
unimod =
    requests
    xml2db
    sqlalchemy
    sqlite3
    argparse
cellenone =
    numpy
aas =
    pyahocorasick
    biopython
    quickdna